
syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

message RegExp {
    google.protobuf.Any value = 1;
}

message Map {
    google.protobuf.Any value = 1;
}

message PrimitiveValueTypes {
    google.protobuf.Any value = 1;
}

message PrimitiveValueTypeNames {
    google.protobuf.Any value = 1;
}

message OptionalPrimitiveValueTypeNames {
    google.protobuf.Any value = 1;
}

message PlaceholderTypeNames {
    google.protobuf.Any value = 1;
}

message OptionalPlaceholderTypeNames {
    google.protobuf.Any value = 1;
}

enum ErrorTypes {
    /** comment */
    InvalidDefinition = 1;
    /** comment */
    Required = 2;
    /** comment */
    TypeUnmatched = 3;
    /** comment */
    RepeatQtyUnmatched = 4;
    SequenceUnmatched = 5;
    ValueRangeUnmatched = 6;
    ValuePatternUnmatched = 7;
    ValueLengthUnmatched = 8;
    ValueUnmatched = 9;
}

message ErrorMessages {
    google.protobuf.StringValue invalidDefinition = 1;
    google.protobuf.StringValue required = 2;
    google.protobuf.StringValue typeUnmatched = 3;
    google.protobuf.StringValue repeatQtyUnmatched = 4;
    google.protobuf.StringValue sequenceUnmatched = 5;
    google.protobuf.StringValue valueRangeUnmatched = 6;
    google.protobuf.StringValue valuePatternUnmatched = 7;
    google.protobuf.StringValue valueLengthUnmatched = 8;
    google.protobuf.StringValue valueUnmatched = 9;
}

message TypeAssertionErrorMessageConstraints {
    google.protobuf.Any minValue = 1;
    google.protobuf.Any maxValue = 2;
    google.protobuf.Any greaterThanValue = 3;
    google.protobuf.Any lessThanValue = 4;
    google.protobuf.DoubleValue minLength = 5;
    google.protobuf.DoubleValue maxLength = 6;
    google.protobuf.DoubleValue min = 7;
    google.protobuf.DoubleValue max = 8;
    google.protobuf.StringValue pattern = 9;
}

message TypeAssertionErrorMessage {
    string code = 1;
    string message = 2;
    string dataPath = 3;
    TypeAssertionErrorMessageConstraints constraints = 4;
    google.protobuf.Any value = 5;
}

message TypeAssertionBase {
    google.protobuf.StringValue messageId = 1;
    google.protobuf.StringValue message = 2;
    ErrorMessages messages = 3;
    google.protobuf.StringValue name = 4;
    google.protobuf.StringValue typeName = 5;
    google.protobuf.StringValue docComment = 6;
    google.protobuf.StringValue passThruCodeBlock = 7;
    google.protobuf.BoolValue noOutput = 8;
}

message NeverTypeAssertion {
    string kind = 1;
    google.protobuf.StringValue messageId = 2;
    google.protobuf.StringValue message = 3;
    ErrorMessages messages = 4;
    google.protobuf.StringValue name = 5;
    google.protobuf.StringValue typeName = 6;
    google.protobuf.StringValue docComment = 7;
    google.protobuf.StringValue passThruCodeBlock = 8;
    google.protobuf.BoolValue noOutput = 9;
}

message AnyTypeAssertion {
    string kind = 1;
    google.protobuf.StringValue messageId = 2;
    google.protobuf.StringValue message = 3;
    ErrorMessages messages = 4;
    google.protobuf.StringValue name = 5;
    google.protobuf.StringValue typeName = 6;
    google.protobuf.StringValue docComment = 7;
    google.protobuf.StringValue passThruCodeBlock = 8;
    google.protobuf.BoolValue noOutput = 9;
}

message UnknownTypeAssertion {
    string kind = 1;
    google.protobuf.StringValue messageId = 2;
    google.protobuf.StringValue message = 3;
    ErrorMessages messages = 4;
    google.protobuf.StringValue name = 5;
    google.protobuf.StringValue typeName = 6;
    google.protobuf.StringValue docComment = 7;
    google.protobuf.StringValue passThruCodeBlock = 8;
    google.protobuf.BoolValue noOutput = 9;
}

message PrimitiveTypeAssertionConstraints {
    google.protobuf.Any minValue = 1;
    google.protobuf.Any maxValue = 2;
    google.protobuf.Any greaterThanValue = 3;
    google.protobuf.Any lessThanValue = 4;
    google.protobuf.DoubleValue minLength = 5;
    google.protobuf.DoubleValue maxLength = 6;
    google.protobuf.Any pattern = 7;
}

message PrimitiveTypeAssertion {
    string kind = 1;
    PrimitiveValueTypeNames primitiveName = 2;
    google.protobuf.StringValue messageId = 3;
    google.protobuf.StringValue message = 4;
    ErrorMessages messages = 5;
    google.protobuf.StringValue name = 6;
    google.protobuf.StringValue typeName = 7;
    google.protobuf.StringValue docComment = 8;
    google.protobuf.StringValue passThruCodeBlock = 9;
    google.protobuf.BoolValue noOutput = 10;
    google.protobuf.Any minValue = 11;
    google.protobuf.Any maxValue = 12;
    google.protobuf.Any greaterThanValue = 13;
    google.protobuf.Any lessThanValue = 14;
    google.protobuf.DoubleValue minLength = 15;
    google.protobuf.DoubleValue maxLength = 16;
    google.protobuf.Any pattern = 17;
}

message PrimitiveValueTypeAssertion {
    string kind = 1;
    PrimitiveValueTypes value = 2;
    google.protobuf.StringValue messageId = 3;
    google.protobuf.StringValue message = 4;
    ErrorMessages messages = 5;
    google.protobuf.StringValue name = 6;
    google.protobuf.StringValue typeName = 7;
    google.protobuf.StringValue docComment = 8;
    google.protobuf.StringValue passThruCodeBlock = 9;
    google.protobuf.BoolValue noOutput = 10;
}

message RepeatedAssertionConstraints {
    google.protobuf.DoubleValue min = 1;
    google.protobuf.DoubleValue max = 2;
}

message RepeatedAssertion {
    string kind = 1;
    TypeAssertion repeated = 2;
    google.protobuf.StringValue messageId = 3;
    google.protobuf.StringValue message = 4;
    ErrorMessages messages = 5;
    google.protobuf.StringValue name = 6;
    google.protobuf.StringValue typeName = 7;
    google.protobuf.StringValue docComment = 8;
    google.protobuf.StringValue passThruCodeBlock = 9;
    google.protobuf.BoolValue noOutput = 10;
    google.protobuf.DoubleValue min = 11;
    google.protobuf.DoubleValue max = 12;
}

message SpreadAssertion {
    string kind = 1;
    TypeAssertion spread = 2;
    google.protobuf.StringValue messageId = 3;
    google.protobuf.StringValue message = 4;
    ErrorMessages messages = 5;
    google.protobuf.StringValue name = 6;
    google.protobuf.StringValue typeName = 7;
    google.protobuf.StringValue docComment = 8;
    google.protobuf.StringValue passThruCodeBlock = 9;
    google.protobuf.BoolValue noOutput = 10;
    google.protobuf.DoubleValue min = 11;
    google.protobuf.DoubleValue max = 12;
}

message SequenceAssertion {
    string kind = 1;
    repeated TypeAssertion sequence = 2;
    google.protobuf.StringValue messageId = 3;
    google.protobuf.StringValue message = 4;
    ErrorMessages messages = 5;
    google.protobuf.StringValue name = 6;
    google.protobuf.StringValue typeName = 7;
    google.protobuf.StringValue docComment = 8;
    google.protobuf.StringValue passThruCodeBlock = 9;
    google.protobuf.BoolValue noOutput = 10;
}

message OneOfAssertion {
    string kind = 1;
    repeated TypeAssertion oneOf = 2;
    google.protobuf.StringValue messageId = 3;
    google.protobuf.StringValue message = 4;
    ErrorMessages messages = 5;
    google.protobuf.StringValue name = 6;
    google.protobuf.StringValue typeName = 7;
    google.protobuf.StringValue docComment = 8;
    google.protobuf.StringValue passThruCodeBlock = 9;
    google.protobuf.BoolValue noOutput = 10;
}

message OptionalAssertion {
    string kind = 1;
    TypeAssertion optional = 2;
    google.protobuf.StringValue messageId = 3;
    google.protobuf.StringValue message = 4;
    ErrorMessages messages = 5;
    google.protobuf.StringValue name = 6;
    google.protobuf.StringValue typeName = 7;
    google.protobuf.StringValue docComment = 8;
    google.protobuf.StringValue passThruCodeBlock = 9;
    google.protobuf.BoolValue noOutput = 10;
}

message EnumAssertion {
    string kind = 1;
    repeated repeated google.protobuf.Any values = 2;
    google.protobuf.StringValue messageId = 3;
    google.protobuf.StringValue message = 4;
    ErrorMessages messages = 5;
    google.protobuf.StringValue name = 6;
    google.protobuf.StringValue typeName = 7;
    google.protobuf.StringValue docComment = 8;
    google.protobuf.StringValue passThruCodeBlock = 9;
    google.protobuf.BoolValue noOutput = 10;
}

message ObjectAssertionMember {
    google.protobuf.Any value = 1;
}

message AdditionalPropsKey {
    repeated google.protobuf.Any value = 1;
}

message AdditionalPropsMember {
    google.protobuf.Any value = 1;
}

message ObjectAssertion {
    string kind = 1;
    repeated ObjectAssertionMember members = 2;
    repeated AdditionalPropsMember additionalProps = 3;
    repeated google.protobuf.Any baseTypes = 4;
    google.protobuf.StringValue messageId = 5;
    google.protobuf.StringValue message = 6;
    ErrorMessages messages = 7;
    google.protobuf.StringValue name = 8;
    google.protobuf.StringValue typeName = 9;
    google.protobuf.StringValue docComment = 10;
    google.protobuf.StringValue passThruCodeBlock = 11;
    google.protobuf.BoolValue noOutput = 12;
}

message AssertionSymlink {
    string kind = 1;
    string symlinkTargetName = 2;
    google.protobuf.StringValue messageId = 3;
    google.protobuf.StringValue message = 4;
    ErrorMessages messages = 5;
    google.protobuf.StringValue name = 6;
    google.protobuf.StringValue typeName = 7;
    google.protobuf.StringValue docComment = 8;
    google.protobuf.StringValue passThruCodeBlock = 9;
    google.protobuf.BoolValue noOutput = 10;
}

message TypeAssertion {
    google.protobuf.Any value = 1;
}

message ValidationContext {
    google.protobuf.BoolValue checkAll = 1;
    google.protobuf.BoolValue noAdditionalProps = 2;
    ErrorMessages errorMessages = 3;
    repeated TypeAssertionErrorMessage errors = 4;
    repeated google.protobuf.Any typeStack = 5;
    TypeAssertionMap schema = 6;
}

message TypeAssertionSetValue {
    TypeAssertion ty = 1;
    bool exported = 2;
    bool resolved = 3;
}

message TypeAssertionMap {
    google.protobuf.Any value = 1;
}

message SymbolResolverContext {
    double nestLevel = 1;
    repeated string symlinkStack = 2;
}

message CodegenContext {
    double nestLevel = 1;
    TypeAssertionMap schema = 2;
}

